<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.dvpires.guideapp.camera.CameraActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/image_camera_view"
            android:layout_width="200dp"
            android:layout_height="200dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/easy_camera_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy_capturar_text"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/easy_camera_start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_shape"
            android:text="@string/capturar_button"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/camera_1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capturar_text"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/camera_start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_shape"
            android:text="@string/capturar_button"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/camera_2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capturar2_text"
            android:textColor="@color/black"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/camera2_start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_shape"
            android:text="@string/capturar_button"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/reject_camera2_start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/reject_button_shape"
            android:text="@string/capturar_button"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/not_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_available_text"
            android:textColor="@color/grey"/>

    </LinearLayout>

</LinearLayout>
